# snake

./: .bumpversion.cfg  .clang-format  .clang-tidy  .cppcheck  .cspell.json  .gitignore  .prettierignore  .quickdocs.yml  .scripts.ts  .template.yml  .travis.yml  .trufflehog3.yaml  .trufflehog3.yml  Doxyfile  Gruntfile.js  LICENSE.md  Makefile  README.md  SConstruct.py  conanfile.py  nodemon.json  output  package.json  pyproject.toml  requirements.txt  setup.cfg  snake
.github/actions/install/: action.yaml  action.yml
.github/workflows/: docs.yaml  docs.yml  review.yaml  review.yml
.husky/: pre-commit
docs/: conf.py  flat.css  index.rst  main.md  update.py
docs/doxygen/: Doxyfile
docs/sphinx/: conf.py  index.rst  scripts.js  styles.css
scripts/: guards.ts
src/: colours.cpp  colours.hpp  draw.cpp  draw.hpp  graphics.cpp  graphics.hpp  init.cpp  inputs.cpp  inputs.hpp  lifecycle.cpp  lifecycle.hpp  main.cpp  main.hpp  numbers.hpp  numbers.spec.cpp  position.cpp  position.hpp  state.cpp  state.hpp  utils.cpp
src/engine/: graphics.cpp  graphics.hpp  inputs.cpp  inputs.hpp  state.cpp  state.hpp
src/headers/: colours.hpp  draw.hpp  init.hpp  inputs.hpp  lifecycle.hpp  main.hpp  state.hpp  utils.hpp
src/models/: position.cpp  position.hpp  position.spec.cpp
src/services/: numbers.cpp  numbers.hpp
test_package/: SConstruct.py  conanfile.py  test.cpp
