[project]
name = "snake"
description = "An SDL2 implementation of the classic game Snake."
version = "0.3.3"

keywords = ["game", "arcade"]

[project.optional-dependencies]
all = [
    "breathe==4.35.0",
    "conan==2.2.2",
    "cppclean@git+https://github.com/myint/cppclean.git@811ed459c9f650ad6135e9c73455136af8885716",
    "furo==2024.1.29",
    "matplotlib==3.8.4",
    "miniscons==0.11.1",
    "myst-parser==2.0.0",
    "SCons==4.3.0",
    "Sphinx==7.2.6",
    "sphinxext-opengraph==0.9.1",
    "trufflehog3==3.0.7",
    "walkmate==1.5.0",
]

[project.license]
name = "MIT"
file = "LICENSE.md"
content-type = "text/markdown"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
repository = "https://github.com/JoelLefkowitz/snake"
homepage = "https://joellefkowitz.github.io/snake"

[[project.authors]]
name = "Joel Lefkowitz"
email = "joellefkowitz@hotmail.com"

[tool.metadata]
publisher = "Conan"
languages = ["C++"]
frameworks = ["SDL2"]
paradigms = ["Event driven"]
lifecycle = "Stable"
