[project]
name = "snake"
description = "An SDL2 implementation of the classic game Snake."
version = "0.3.3"

keywords = ["game", "arcade"]

[project.optional-dependencies]
all = [
    "breathe~=4.35.0",
    "bump2version==1.0.1",
    "conan~=2.12.0",
    "furo~=2024.1.0",
    "matplotlib~=3.8.0",
    "miniscons~=0.13.0",
    "myst-parser~=2.0.0",
    "SCons~=4.3.0",
    "six~=1.17.0",
    "Sphinx~=7.2.0",
    "sphinxext-opengraph~=0.9.0",
    "trufflehog3~=3.0.0",
    "walkmate~=1.5.0",
]

[project.license]
name = "MIT"
file = "LICENSE.md"
content-type = "text/markdown"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
repository = "https://github.com/JoelLefkowitz/snake"
homepage = "https://joellefkowitz.github.io/snake"

[[project.authors]]
name = "Joel Lefkowitz"
email = "joellefkowitz@hotmail.com"

[tool.metadata]
publisher = "Conan"
languages = ["C++"]
frameworks = ["SDL2"]
paradigms = ["Event driven"]
lifecycle = "Stable"
