[metadata]
name = snake
version = 1.0.0
description = An SDL2 implementation of the classic game snake
url = https://github.com/JoelLefkowitz/snake
license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown
author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

[portfolio]
languages = C++
frameworks = SDL2
paradigms = Event driven programming
status = Stable
project_type = Miscellaneous
