[metadata]
name = snake
version = 1.0.0

description = An SDL2 implementation of the classic game Snake.
url = https://github.com/JoelLefkowitz/snake

license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown

author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

[portfolio]
project_type = Miscellaneous
status = Stable
homepage = https://joellefkowitz-snake.readthedocs.io

languages =
    C++

frameworks = 
    SDL2

paradigms = 
    Event driven programming
