[metadata]
name = None
version = 0.1.0

description = An SDL2 implementation of the classic game Snake.
url = https://github.com/JoelLefkowitz/snake

author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

project_urls =
   Bug Tracker   = https://github.com/JoelLefkowitz/snake/issues
   CI            = https://travis-ci.com/github/JoelLefkowitz/snake
   Documentation = https://snake.readthedocs.io/en/latest/
   Source Code   = https://github.com/JoelLefkowitz/snake

[portfolio]
project_type = Miscellaneous
status = Planning
homepage = https://github.com/JoelLefkowitz/snake

languages =
    C++

frameworks =
    SDL2

paradigms =
    Event driven programming
